# module1-lab1

./: .gitignore  README.md
Lab1/app/: package-lock.json
Lab1/docs/: README.md  STUDENT_LAB_GUIDE.md  lab_assignment.md  lab_setup_guide.md
Lab1/solution/terraform/: main.tf
Lab1/terraform/: gcs.tf  iam.tf  locals.tf  main.tf  variables.tf
Lab2/: README.md
Lab2/data/: aws_production.json
Lab2/docs/: README.md  STEP_BY_STEP_SOLUTION.md  STUDENT_LAB_GUIDE.md  aws_to_gcp_migration_analysis.md  gcp_value_proposition_analysis.md  lab_deployment_solution_report.md
Lab2/terraform/: deploy.sh  main.tf  verify.sh
Lab3/: .env  STUDENT_LAB_GUIDE.md  pyproject.toml
Lab3/cymbal_navigation_agent/: .env  agent.py
Lab3/cymbal_navigation_agent/app_utils/: deploy.py
